--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,18 @@ area.code=101190101
 weather.url=http://aider.meizu.com/app/weather/listWeather
 sendall.url=https://api.weixin.qq.com/cgi-bin/message/mass/sendall
 
-spring.cache.type=ehcache
-spring.cache.ehcache.config=classpath:/config/ehcache.xml
+#spring.cache.type=ehcache
+#spring.cache.ehcache.config=classpath:/config/ehcache.xml
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+#客户端超时
+spring.redis.timeout=10000
+#最大连接数
+spring.redis.lettuce.pool.max-active=20
+#最小空闲
+spring.redis.lettuce.pool.min-idle=5
+#连接超时
+spring.redis.lettuce.pool.max-wait=5000ms
+#最大空闲
+spring.redis.lettuce.pool.max-idle=20
