百度ocr demo+ 格式化代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,8 @@ access.token=xxxxx
 area.code=101190101
 weather.url=http://aider.meizu.com/app/weather/listWeather
 sendall.url=https://api.weixin.qq.com/cgi-bin/message/mass/sendall
-
 #spring.cache.type=ehcache
 #spring.cache.ehcache.config=classpath:/config/ehcache.xml
-
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 #客户端超时
@@ -21,3 +19,11 @@ spring.redis.lettuce.pool.min-idle=5
 spring.redis.lettuce.pool.max-wait=5000ms
 #最大空闲
 spring.redis.lettuce.pool.max-idle=20
+# baidu ocr
+baidu.ocr.host=https://aip.baidubce.com
+baidu.ocr.general_basic.url=${baidu.ocr.host}/rest/2.0/ocr/v1/general_basic
+baidu.ocr.token.url=${baidu.ocr.host}/oauth/2.0/token
+# 官网获取的 API Key 更新为你注册的
+baidu.ocr.clientId=xxxxx
+# 官网获取的 Secret Key 更新为你注册的
+baidu.ocr.clientSecret=xxxxx
